examples/politicas-rede/ns-colors.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colors
  labels:
    project: colors
