examples/politicas-rede/gato-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gato
  namespace: animals
  labels:                 
    app: gato       
spec:
  containers:             
  - name: gato-1
    image: busybox
    command: ['sh', '-c', 'while true; do echo "Pod gato rodando na porta 9000"; sleep 2; done']
  - name: gato-2
    image: busybox
    command: ['sh','-c', 'echo "Pod gato rodando na porta 9000" > index.html && /bin/httpd -p 9000 -f']
    ports:                 
    - containerPort: 9000
      protocol: TCP
